parser::AstFactory: rename as ast::Factory
	* src/parser/event-match.hh, src/parser/event-match.cc,
	* src/parser/ast-factory.hh, src/parser/ast-factory.cc:
	Rename as...
	* src/ast/event-match.hh, src/ast/event-match.cc,
	* src/ast/factory.hh, src/ast/factory.cc:
	these.
	Adjust all dependencies.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -109,6 +109,12 @@ fwd_hh_prologue: |2
 # The end of the fwd.hh file, in the namespace.
 fwd_hh_epilogue: |2
 
+  // factory.hh.
+  class Factory;
+
+  // event-match.hh.
+  struct EventMatch;
+
   typedef libport::hash_map<libport::Symbol, ast::rExp> modifiers_type;
 
 printer_cc_prologue: |2
