--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -37,6 +37,7 @@ AM_LDADD =					\
 
 include libuco/local.mk
 include libuobject/local.mk
+include libuvalue/local.mk
 
 if SDK_REMOTE
 include bin/local.mk
