Broader availability of dtors.
	* include/urbi/ucontext-impl.hh, src/libuco/uobject-common.cc,
	* src/libuco/uvar-common.cc: Move pure virtual dtors...
	* include/urbi/ucontext-impl.hxx: to here.
	* include/local.mk: Adjust.

	* include/urbi/ucontext.hxx: Style changes.
	* src/libuco/uobject-common.cc: Move from here...
	* include/urbi/ucallbacks.hh.template: to here.

--- a/sdk-remote/include/urbi/ucallbacks.hh.template
+++ b/sdk-remote/include/urbi/ucallbacks.hh.template
@@ -43,6 +43,10 @@ namespace urbi
       virtual void registerCallback() = 0;
       virtual void clear() = 0;
     };
+
+    inline
+    UGenericCallbackImpl::~UGenericCallbackImpl()
+    {}
   };
 
   //! Function and Event storage mechanism
