libuvalue: full resurection.
libuvalue is also needed by ker/libuobject.so.

Revert "libuvalue removal."
This reverts commit 78236f8f3ab4230853f28415d1ef79bb0e4cc052.

Revert "Get rid of libuvalue."
This reverts commit 55c1dbe4f1b12867e5f12dab7862ff7aaa15f12d.

	* src/Makefile.am: Fix order.
	* src/README: Complete.
	* src/libuco/local.mk: Fix dependency.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -35,6 +35,8 @@ AM_LDADD =					\
   $(PTHREAD_LIBS)				\
   $(LIBPORT_LIBS)
 
+# The order matters: build dependencies first.
+include libuvalue/local.mk
 include libuco/local.mk
 include libuobject/local.mk
 
