ast: improve else-if pretty printing.
	* src/ast/ast.yml (If): If the else clause is another "if",
	don't indent, put it right after the "else".

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -620,8 +620,12 @@ If:
     - ~thenclause
     - libport::iendl
     - '"else"'
-    - libport::iendl
-    - ~elseclause
+    - '{
+         if (n->elseclause_get()->body_get().is_a<If>())
+           ostr_ << " " << *n->elseclause_get()->body_get();
+         else
+           ostr_ << libport::iendl << *n->elseclause_get();
+       }'
 
 While:
   super:
