--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -147,6 +147,8 @@ case $enable_programs in
   (*)  ac_configure_args+=" --disable-programs";;
 esac
 
+WITH_XENOMAI
+
 # Let libjpeg use the same libdir as us.
 ac_configure_args+=" libdir='${libdir}'"
 AC_CONFIG_SUBDIRS([jpeg])
