urbi-launch: Make it relocatable.
	* src/bin/local.mk: Remove dependency libs.
	* src/bin/urbi-launch.cc: New. Load liburbi, finding it in
	URBI_PATH or dirname(argv[0]), call urbi_launch.
	* src/liburbi/local.mk: Add urbi-launch.cc.
	* src/bin/urbi-launch.cc: Rename as...
	* src/liburbi/urbi-launch.cc: this. Rename main to urbi_launch.
	* src/tests/bin/urbi-launch.in: Add liburbi and libjpeg location
	to LIBRARY_PATH.

--- a/sdk-remote/src/tests/bin/urbi-launch.in
+++ b/sdk-remote/src/tests/bin/urbi-launch.in
@@ -46,7 +46,8 @@ fi
 
 # Find the noninstalled libport libraries.
 libport_dir=$abs_top_builddir/libport
-for d in $libport_dir/lib/*/.libs
+# Careful, do not add directory containing libuobject.
+for d in $libport_dir/lib/*/.libs $abs_top_builddir/*/.libs $abs_top_builddir/src/liburbi/.libs
 do
   export LD_LIBRARY_PATH=$d:$LD_LIBRARY_PATH
   export DYLD_LIBRARY_PATH=$d:$DYLD_LIBRARY_PATH
