umake: Make it relocatable.
	* sdk/umake.in: If $prefix does not exists, use $0 to find it.

--- a/sdk-remote/sdk/umake.in
+++ b/sdk-remote/sdk/umake.in
@@ -225,10 +225,15 @@ builddir=
 builddir_pref="_ubuild"
 
 : ${prefix="@prefix@"}
+if test ! -d "$prefix" ; then
+ prefix=$(dirname $0)/..
+fi
 : ${PACKAGE_BRAND="@PACKAGE_BRAND@"}
 : ${branddir="@branddir@"}
 #prefix="$dir/"
 #prefix="${prefix%/bin*}"
+
+
 
 # Target name.
 target=
