--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /doc/tests/installation/
 /doc/tests/introduction/
 /doc/tests/k1-to-k2/
+/doc/tests/platforms/
 /doc/tests/specs/
 /doc/tests/tutorial/
 /doc/tests/uobject/
